do on student web

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                     <li><a href="#achievement">Achievement</a></li>
 
-                    <li><a href="HTML/index.html">Student</a></li>
+                    <li><a href="HTML/student.html">Student</a></li>
 
                     <li><a href="#schedule">Schedule</a></li>
                 </ul>
@@ -73,7 +73,7 @@
     <!-- About section -->
     <section class="about-section">
         <div class="about-content">
-            <h2 id="about ">About Us</h2>
+            <h2 id="about">About Us</h2>
 
             <p>
                 The Arsi University Computer Lab Website is designed to enhance the experience of students and staff by providing a seamless and efficient way to manage computer lab resources. Our goal is to create a platform that not only schedules and tracks lab usage
@@ -86,11 +86,11 @@
         </div>
         <div class="about-image">
             <!-- Replace the URL with the actual image -->
-            <img src="image/banner2.jpg " alt="Computer Lab " />
+            <img src="image/banner2.jpg" alt="Computer Lab" />
         </div>
     </section>
     <!-- Service -->
-    <section class="services-section">
+    <section id="service" class="services-section">
         <h2>Services We Provide</h2>
         <p>
             Explore the variety of computer lab services we offer at Arsi University computer lab to empower students in technology.
@@ -102,33 +102,33 @@
                 <p>
                     Assistance in assembling and configuring computer systems for optimal performance.
                 </p>
-                <a href="# ">Learn More</a>
+                <a href="#">Learn More</a>
             </div>
             <div class="service-box">
                 <h3>Software Installation</h3>
                 <p>
                     Guidance on installing essential educational software and troubleshooting issues.
                 </p>
-                <a href="# ">Learn More</a>
+                <a href="#">Learn More</a>
             </div>
             <div class="service-box">
                 <h3>Programming Tutorials</h3>
                 <p>
                     Interactive sessions to learn coding languages like Python, Java, and HTML.
                 </p>
-                <a href="# ">Learn More</a>
+                <a href="#">Learn More</a>
             </div>
             <div class="service-box">
                 <h3>Project Assistance</h3>
                 <p>
                     Support for students working on tech-based academic and personal projects.
                 </p>
-                <a href="# ">Learn More</a>
+                <a href="#">Learn More</a>
             </div>
         </div>
     </section>
     <!-- schedule section -->
-    <section id="schedule ">
+    <section id="schedule">
         <div class="wrapper">
             <h2 class="lab">Lab Schedule</h2>
             <table>
@@ -166,7 +166,7 @@
     </section>
     <!-- Goals Section -->
 
-    <section class="goal-section" id="goal ">
+    <section class="goal-section" id="goal">
         <h2 class="style">Our Goals</h2>
         <div class="content">
             <h3>Provide Access to Cutting-Edge Technology</h3>
@@ -190,7 +190,7 @@
             </p>
         </div>
     </section>
-    <section id="achievement ">
+    <section id="achievement">
         <div class="content">
             <h class="style">Achievement</h>
 
@@ -218,7 +218,7 @@
     <!-- Form/Contact Secion -->
     <section>
         <div class="container">
-            <form id="contact ">
+            <form id="contact">
                 <h3>Contact form</h3>
                 <input type="text" id="FirstName" placeholder="First Name" required />
                 <br />
@@ -252,37 +252,33 @@
         <div class="footer-bgc">
             <div class="footer-wrapper">
                 <div class="internal-footer">
-                    <div style="display: inline-flex">
+                    <div style="display: inline-flex;justify-content: space-between;">
                         <div>
                             <h3>Links</h3>
                             <li><a href="#home ">Home</a></li>
                             <li><a href="#about ">About</a></li>
                             <li>
-                                <a href="https://www.arsiuniversity.edu " target="_blank ">Arsi University</a
-                  >
-                </li>
-              </div>
-            </div>
-            <div style="display: inline-flex">
-              <div>
-                <h3>Contact Us</h3>
+                                <a href="https://www.arsiuniversity.edu " target="_blank ">Arsi University</a>
+                            </li>
+                            <div style="display: inline-flex">
+                                <div>
+                                    <h3>Contact Us</h3>
 
-                <p>Email: support@arsiuniversity.edu</p>
-                <p>Phone: +123-456-7890</p>
-              </div>
-            </div>
-            <div style="display: inline-flex">
-              <div class="social-icons">
-                <h3>Social Media Links</h3>
-                <li>
-                  <a
-                    href="https://www.facebook.com/kelbessa.adugna"
-                    target="_blank"
-                    style="font-size: 40px"
-                    title="Facebook"
-                  >
-                    <i class="fab fa-facebook-f"></i>
-                  </a>
+                                    <p>Email: support@arsiuniversity.edu</p>
+                                    <p>Phone: +123-456-7890</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div style="display: inline-flex">
+                        <div class="social-icons">
+                            <h3>Social Media Links</h3>
+                            <li>
+                                <a href="https://www.facebook.com/kelbessa.adugna" target="_blank" style="font-size: 40px" title="Facebook">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
                             </li>
                             <li>
                                 <a href="https://x.com/home" target="_blank" style="font-size: 40px" title=" Twitter ">
@@ -312,7 +308,9 @@
                             <input type="email " id="email" placeholder="Enter your email " required />
                             <br />
                             <br />
-                            <button type="submit" id="email">Subscribe</button>
+                            <button type="submit" id="email" style="width: 90px">
+                  Subscribe
+                </button>
                         </form>
                     </div>
 
@@ -323,19 +321,19 @@
                         <li>
                             <a href="https://maps.app.goo.gl/ZqdzbsXYDTTjqF1CA " target="_blank ">View on Map</a
                 >
-              </li>
-            </div>
-
-            <div>
-              <h3>Privacy Policy & Terms</h3>
-              <li><a href="privacy-policy.html ">Privacy Policy</a></li>
+              </li><div>
+                <h3>Privacy Policy & Terms</h3>
+                <li><a href="privacy-policy.html ">Privacy Policy</a></li>
                         <li><a href="terms-of-service.html ">Terms of Service</a></li>
                     </div>
                 </div>
-                <p style="padding: 20px 0; margin-top: 20px; text-align: center">
-                    Follow us on social media for more updates and events.
-                </p>
+
+
             </div>
+            <p style="padding: 20px 0; margin-top: 20px; text-align: center">
+                Follow us on social media for more updates and events.
+            </p>
+        </div>
         </div>
 
         <div class="copyright">
