--- a/HTML/student.html
+++ b/HTML/student.html
@@ -46,20 +46,20 @@
             </li>
         </ol>
     </header>
-    <h1 style="text-align: center; color: red; background-color: aqua">
+    <h1 style="text-align: center; color: rgb(17, 16, 16); background-color: aqua">
         Student Information Regarding the Use of Our Lab
     </h1>
     <!-- paragraph section -->
 
     <section id="about">
-        <h2 style=" text-align: center; ; color: blue; padding: 20px; ">About Us</h2>
+        <h2 style=" text-align: center; ; color: rgb(0, 174, 255); padding: 20px; ">About Us</h2>
 
         <p>Our networking systems, the lab provides access to essential resources like high-performance computers, development tools, and cloud platforms.With expert guidance, collaborative projects, and cutting-edge technology, each student can innovate,
             experiment. Apply theoretical knowledge to real-world challenges, ensuring a strong foundation for future careers in the technology industry.</p>
     </section>
     <!-- Midea section -->
     <section id="multimedia " class="multimedia ">
-        <h2 style=" text-align: center; background-color: pink; color: blue; padding: 20px; ">
+        <h2 style=" text-align: center; background-color: rgb(74, 113, 145); color: #fff; padding: 20px; ">
             multimedia
         </h2>
         <div class="video-container ">
