--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 <!-- internal css -->
 <style>
     .internal-css {
-        background-color: cadetblue;
+        background-color: black;
+        box-shadow: black;
         border: solid 5px rgba(233, 233, 232, 0.918);
-        padding: 20px;
-        margin: 5px;
+        padding: 5px;
+       
     }
     
     .internal-h1 {
         font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-        font-size: 80px;
+        font-size: 60px;
         text-align: center;
+        color: #fff;
     }
 </style>
 
