home section decorate

--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
       </nav>
     </header>
     <div class="internal-css">
-      <h1 class="internal-h1">Arsi University Computer Lab</h1>
+      <h1 class="internal-h1">Welcome to Arsi University Computer Lab</h1>
     </div>
-    <section>
+    <section class="home-section">
       <!-- Home section -->
       <div id="home">
-        <div>
-          <h2 class="text">Welcome to Arsi University Computer Lab</h2>
+       
+      </div>
+       <div>
           <p class="text2">
-            This website helps connect computer labs efficiently and effectively
-            to a web server.
+            This website helps computer labs to connect 
+            to web server.
           </p>
         </div>
-      </div>
     </section>
 
     <!-- About section -->
