--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <section class="home-section">
       <!-- Home section -->
       <div id="home">
+        <h2 class="slogan"><br> Transforming Ideas into <br> Digital Reality</h2>
        
       </div>
        <div>
