change on gaols

--- a/index.html
+++ b/index.html
@@ -187,61 +187,58 @@
     </section>
     <!-- Goals Section -->
 
-    <section class="goal-section" id="goal">
-      <h2 class="style">Our Goals</h2>
-      <div class="content">
-        <h3>Provide Access to Cutting-Edge Technology</h3>
-        <p>
-          Ensure students have access to the latest hardware and software for
-          learning and innovation.
-        </p>
-
-        <h3>Promote Digital Literacy</h3>
-        <p>
-          Offer training programs to enhance programming, cybersecurity, and IT
-          skills.
-        </p>
-
-        <h3>Foster Industry Collaboration</h3>
-        <p>
-          Build partnerships with tech companies to provide real-world learning
-          opportunities.
-        </p>
-
-        <h3>Encourage Innovation</h3>
-        <p>
-          Create a platform for students to develop, showcase, and implement
-          their technical ideas.
-        </p>
-      </div>
-    </section>
-    <section id="achievement">
-      <div class="content">
-        <h class="style">Achievement</h>
-
-        <h3>best Lab of the Year 2025</h3>
-        <p>
-          Awared for excellence in education and resource management at Arsi
-          University
-        </p>
-
-        <h3>initiate Successful Projects</h3>
-        <p>
-          Projects developed by students, including apps, websites, and AI
-          models.
-        </p>
-
-        <h3>Hosted Workshops</h3>
-        <p>
-          Covering topics like programming, cybersecurity, and hardware repair.
-        </p>
-
-        <p>
-          Partnered with leading companies like Microsoft and Google for events
-          and internships.
-        </p>
-      </div>
-    </section>
+    <section class="goal-achieve">
+      <div class="goal">
+          <h2 class="style"Style="text-align:center;">Our Goals</h2>
+          <div class="content">
+              <h3>Provide Access to Cutting-Edge Technology</h3>
+              <p>
+                  Ensure students have access to the latest hardware and software for learning and innovation.
+              </p>
+  
+              <h3>Promote Digital Literacy</h3>
+              <p>
+                  Offer training programs to enhance programming, cybersecurity, and IT skills.
+              </p>
+  
+              <h3>Foster Industry Collaboration</h3>
+              <p>
+                  Build partnerships with tech companies to provide real-world learning opportunities.
+              </p>
+  
+              <h3>Encourage Innovation</h3>
+              <p>
+                  Create a platform for students to develop, showcase, and implement their technical ideas.
+              </p>
+          </div>
+          </div>
+      
+      
+          <div class="achieve">
+              <h1 class="style"Style="text-align:center;">Achievement</h1>
+  
+              <h3>best Lab of the Year 2025</h3>
+              <p>
+                  Awared for excellence in education and resource management at Arsi University
+              </p>
+  
+              <h3>initiate Successful Projects</h3>
+              <p>
+                  Projects developed by students, including apps, websites, and AI models.
+              </p>
+  
+              <h3>Hosted Workshops</h3>
+              <p>
+                  Covering topics like programming, cybersecurity, and hardware repair.
+              </p>
+  
+              <p>
+                  Partnered with leading companies like Microsoft and Google for events and internships.
+              </p>
+          </div>
+  
+  </section>
+  
 
     <!-- Form/Contact Secion -->
     <section>
