add java folder

--- a/Web Folder/HTML/student.html
+++ b/Web Folder/HTML/student.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="student.css">
     <title>Student</title>
+    <!-- robsan task -->
     <style>
         /*internal style */
         
@@ -21,6 +22,7 @@
             /* Ensures responsiveness */
         }
     </style>
+    <!-- robsan task -->
 </head>
 
 <body>
@@ -71,11 +73,12 @@
     </section>
 
     <!-- formset section -->
-
+    <!-- robsan task -->
     <section id="iframe" class="image-container">
         <iframe src="Image/dubbledesktop.jpg" frameborder="2" width="600" height="600"></iframe>
         <iframe src="Image/lab-Rule.jpg" frameborder="0" width="600" height="600"></iframe>
     </section>
+    <!-- robsan task -->
     <footer class="bg-color">
         <p>© 2025 Student Website. All rights reserved. Designed by Student Team Privacy Policy</p>
     </footer>
