change student logo image

--- a/Web Folder/HTML/student.html
+++ b/Web Folder/HTML/student.html
@@ -29,10 +29,13 @@
     <header class="bg-color">
 
         <ol>
+
             <li>
-                <img src="Image/togther.jpg" alt="" style="width: 20px;border-radius: 80px;">
+                <img src="Image/logo.jpg" alt="" style="width: 1.5rem;border-radius: 25px;padding: 5px;">
                 <a href="#">Logo</a>
             </li>
+
+
 
             <li>
                 <a href="#home">Home</a>
