--- a/Web Folder/index.html
+++ b/Web Folder/index.html
@@ -184,7 +184,7 @@
     <!-- seifu task -->
     <!-- Goals Section -->
 
-    <section class="goal-achieve">
+    <section id="goal" class="goal-achieve">
         <div class="goal">
             <h2 class="style" Style="text-align:center;">Our Goals</h2>
             <div class="content">
@@ -211,7 +211,7 @@
         </div>
 
 
-        <div class="achieve">
+        <div id="achievement" class="achieve">
             <h1 class="style" Style="text-align:center;">Achievement</h1>
 
             <h3>best Lab of the Year 2025</h3>
