--- a/JAVASCRIPT/game/game.html
+++ b/JAVASCRIPT/game/game.html
@@ -38,7 +38,7 @@
     <div id="congrats" class="level-container" style="display: none;">
         <h2> Congratulations! 👏</h2>
         <p id="congrats-message"></p>
-        <button id="next-level-btn" onclick="loadLevel2()" style="display: none;">Go to Next Level</button>
+        <button id="next-level-btn" onclick="loadLevel2()" style="display: none;text-align: cente;">Go to Next Level</button>
     </div>
 
     <p id="message"></p>
