--- a/Web Folder/HTML/student.html
+++ b/Web Folder/HTML/student.html
@@ -78,7 +78,7 @@
     <!-- formset section -->
     <!-- robsan task -->
     <section id="iframe" class="image-container">
-        <iframe src="Image/dubbledesktop.jpg" frameborder="2" width="600" height="600"></iframe>
+        <iframe src="Image/dubbledesktop.jpg" frameborder="2" width="600px" height="600px"></iframe>
         <iframe src="Image/lab-Rule.jpg" frameborder="0" width="600" height="600"></iframe>
     </section>
     <!-- robsan task -->
